--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -53,7 +53,7 @@
   margin-bottom: 0;
   padding-bottom: 0;
   &::-webkit-scrollbar {
-    background-color: linear-gradient(to bottom, #023e8a 20%, #00b4d8 80%);
+    background-color: linear-gradient(to bottom, #000000 20%, #000000 80%);
     width: 8px;
   }
 
