--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -2,9 +2,12 @@
     background: #1d3d8d; 
     opacity: 1;
     width: 100%; 
-    height: 100px; 
+    height: 70px; 
     position: fixed; 
-    top: 0; 
+     top: 0px; 
+   left: 5px;
+   right: 5px;
+   border-radius: 15px;
     z-index: 3;  
     display: flex; 
     align-items: center;
