--- a/src/components/Teams/index.scss
+++ b/src/components/Teams/index.scss
@@ -9,7 +9,7 @@
     h1.page-title {
         margin-left: 100px;
         margin-top: 120px;
-        color: #fff;
+        color: #494949;
     }
 
     .images-container {
