--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -101,7 +101,7 @@
 
     p {
       font-size: 16px;
-      color: #2b2b2b;
+      color: #fff;
       font-family: sans-serif;
       font-weight: 500;
       max-width: fit-content;
